<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Spy on Girls</string>
    <string name="take_image">Take Image</string>
    <string name="record_video">Record Video</string>
    <string name="audio_recorder">Audio Recorder</string>
    <string name="get_more_similar_app">Get more similar app</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="choose_language">Choose Language</string>
    <string name="comment_for_the_application">Comment for the Application</string>
    <string name="info">Info</string>
    <string name="share_this_application">Share this Application</string>
    <string name="contact_us">Contact Us</string>
    <string name="by_showing_pictures">By Showing Pictures</string>
    <string name="by_showing_video_s">By Showing Video\'s</string>
    <string name="by_taking_victim_phone_number">By taking victim phone number</string>
    <string name="run_application_in_background">Run Application in Background</string>
    <string name="select_camera">Select Camera</string>
    <string name="number_of_image_taking">Number Of Image Taking</string>
    <string name="save_in">Save In</string>
    <string name="flash">Flash</string>

    <string name="record_in_background">Record in Background</string>
    <string name="by_sending_sms">By Sending SMS</string>


    <string name="front">Front</string>
    <string name="rear">Rear</string>





    <string name="info_text">Have you ever wondered if you could take a picture of a sexy girl, who gave you her phone number or has set next to you one day in the metro… and you wanted absolutely to show her to your best friends. weal, to day it\'s possible we have developed an application that can allow you to take photo of sexy girls without anyone noticing. \n\n
©Valrie Evans Company. All rights reserved.</string>



    <string name="help_text">This app will allow you to take pictures , record a video and record audio in order to spy on sexy girls. \n\n
- You can show you target images or video and the application will take her\his pictures or  video at the same time.     \n\n
-You can ask your target for her\his phone number… the app will record his\her video or take pictures at the same time when his\her taping the phone number ( the phone number will also be added in your contacts . \n\n
-you can start recording the application on background and "reduce
" the app so you can take images or record video in background.  \n\n
-you can also record voice in background or start recording when your phone receive a SMS "Start recording" send by any number</string>

</resources>
